--- a/public/Kanbas/Courses/Grades/screen.html
+++ b/public/Kanbas/Courses/Grades/screen.html
@@ -12,7 +12,7 @@
                     <td valign="top">
                         <ul class="wd-kanbas-navigation">
                             <li><a href="http://northeastern.edu"><img src="/Kanbas/Navigation/icon.png" class="icon"/></a></li>
-                            <li><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user"></i>Account</a></li>
+                            <li><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user" style="color: white;"></i>Account</a></li>
                             <li><a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i>Dashboard</a></li>
                             <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i>Courses</a></li>
                             <li><a href="#"><i class="fa fa-calendar"></i>Calendar</a></li>
