--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -39,7 +39,7 @@
     <div class="d-none d-md-block me-1">
       <ul class="wd-kanbas-navigation">
         <li><a href="http://northeastern.edu"><img src="/Kanbas/Navigation/icon.png" class="icon" /></a></li>
-        <li><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user"></i>Account</a></li>
+        <li><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user" style="color: white;"></i>Account</a></li>
         <li><a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i>Dashboard</a></li>
         <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i>Courses</a></li>
         <li><a href="#"><i class="fa fa-calendar"></i>Calendar</a></li>
@@ -54,7 +54,7 @@
     <div class="row">
 
       <div class="row d-none d-md-block">
-        <div class="col ps-5 pt-3">
+        <div class="col ps-4 pt-3">
           <a href="#"><i class="fa fa-bars fa-lg" style="color: red; float: left;"></i></a>
           &nbsp
           <span style="color: red;">CS1234</span>
