--- a/public/Kanbas/Courses/Home/screen.html
+++ b/public/Kanbas/Courses/Home/screen.html
@@ -15,8 +15,8 @@
     <nav class="navbar bg-dark border-bottom border-body" data-bs-theme="dark">
       <div class="container-fluid">
 
-        <a class="navbar-toggler" type="button" data-bs-toggle="collapse" href="/Kanbas/Courses/Home/kanbasnav.html" role="option"
-          aria-expanded="false" aria-controls="navbarSupportedContent">
+        <a class="navbar-toggler" type="button" data-bs-toggle="collapse" href="/Kanbas/Courses/Home/kanbasnav.html"
+          role="option" aria-expanded="false" aria-controls="navbarSupportedContent">
 
           <span class="navbar-toggler-icon"></span>
         </a>
@@ -24,22 +24,24 @@
         <a class="navbar-brand" href="#">Navbar</a>
 
         <div class="float-end">
-          <a href="#"><i class="fa fa-binoculars" aria-hidden="true"
-              style="color: darkgray;"></i></a>
+          <a href="#"><i class="fa fa-binoculars" aria-hidden="true" style="color: darkgray;"></i></a>
           <a href="/Kanbas/Courses/Home/coursenav.html"><i class="fa fa-chevron-down" aria-hidden="true"
               style="color: darkgray;"></i></a>
-      </div>
+        </div>
 
       </div>
     </nav>
+
 
   </div>
 
   <div class="d-flex">
     <div class="d-none d-md-block me-1">
+
       <ul class="wd-kanbas-navigation">
         <li><a href="http://northeastern.edu"><img src="/Kanbas/Navigation/icon.png" class="icon" /></a></li>
-        <li><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user" style="color: white;"></i>Account</a></li>
+        <li><a href="/Kanbas/Account/Profile/screen.html"><i class="fa fa-user" style="color: white;"></i>Account</a>
+        </li>
         <li><a href="/Kanbas/Dashboard/screen.html"><i class="fa fa-tachometer"></i>Dashboard</a></li>
         <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html"><i class="fa fa-book"></i>Courses</a></li>
         <li><a href="#"><i class="fa fa-calendar"></i>Calendar</a></li>
@@ -53,26 +55,29 @@
 
     <div class="row">
 
-      <div class="row d-none d-md-block">
-        <div class="col ps-4 pt-3">
+      <div class="flex-row-container d-none d-md-block">
+        <div class="col ps-4 pt-4">
+
           <a href="#"><i class="fa fa-bars fa-lg" style="color: red; float: left;"></i></a>
-          &nbsp
-          <span style="color: red;">CS1234</span>
-          <span style="color: darkgrey;">></span>
-          <span>Modules</span>
-
-          <button class="float-end" style="border-radius: 4px;">Student View</button>
+          <nav style="--bs-breadcrumb-divider: '>';" aria-label="breadcrumb">
+            
+            <button class="float-end" style="border-radius: 4px;"><i class="fa fa-binoculars"></i> Student View</button>
+            <ol class="breadcrumb">
+              &nbsp
+              <li class="breadcrumb-item"><span style="color: red;">CS1234</span></li>
+              <li class="breadcrumb-item active" aria-current="page">Modules</li>
+            </ol>
+          </nav>
         </div>
-
       </div>
 
       <hr>
 
       <div class="col-2 d-none d-md-block">
-        <span style="color:darkgrey;">1234.5678</span>
+        <span style="color:darkgrey;" class="ps-2">1234.5678</span>
         <ul class="wd-navigation">
-          <li><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
-          <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html">Modules</a></li>
+          <li class="wd-active"><a href="/Kanbas/Courses/Home/screen.html">Home</a></li>
+          <li><a href="/Kanbas/Courses/Home/screen.html">Modules</a></li>
           <li><a href="http://piazza.com">Piazza</a></li>
           <li><a href="#">Zoom</a></li>
           <li><a href="/Kanbas/Courses/Assignments/screen.html">Assignments</a></li>
@@ -172,26 +177,37 @@
       <h4>Course Status</h4>
 
       <div class="btn-group" role="group" style="padding-bottom: 10px;">
-        <button type="button" class="btn btn-outline-dark"><i class="fa fa-times-circle-o" aria-hidden="true"></i> Unpublish</button>
-        <button type="button" class="btn btn-outline-dark" style="color: green;"><i class="fa fa-check-circle-o" style="color: green;"></i> Published</button>
+        <button type="button" class="btn btn-outline-dark"><i class="fa fa-times-circle-o" aria-hidden="true"></i>
+          Unpublish</button>
+        <button type="button" class="btn btn-outline-dark" style="color: green;"><i class="fa fa-check-circle-o"
+            style="color: green;"></i> Published</button>
       </div>
 
       <div class="btn-group-vertical" style="padding-bottom: 10px;">
-        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-sign-in" aria-hidden="true"></i> Import Existing Content</button>
-        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-upload" aria-hidden="true"></i> Import from Commons</button>
-        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bullseye" aria-hidden="true"></i> Choose Home Page</button>
-        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bar-chart" aria-hidden="true"></i> View Course Stream</button>
-        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bullhorn" aria-hidden="true"></i> New Announcement</button>
-        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bar-chart" aria-hidden="true"></i> New Analytics</button>
-        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bell-o" aria-hidden="true"></i> View Course Notifications</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-sign-in"
+            aria-hidden="true"></i> Import Existing Content</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-upload"
+            aria-hidden="true"></i> Import from Commons</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bullseye"
+            aria-hidden="true"></i> Choose Home Page</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bar-chart"
+            aria-hidden="true"></i> View Course Stream</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bullhorn"
+            aria-hidden="true"></i> New Announcement</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bar-chart"
+            aria-hidden="true"></i> New Analytics</button>
+        <button type="button" class="btn btn-outline-secondary" style="text-align: left;"><i class="fa fa-bell-o"
+            aria-hidden="true"></i> View Course Notifications</button>
       </div>
 
       <div style="padding-bottom: 15px;">
         <h4>To Do</h4>
         <hr>
-        <a href="#" style="color: red; text-decoration: none;"><i class="fa fa-list-ol" aria-hidden="true"></i> Grade A1</a>
-        <br/>
-        <a href="#" style="color: red; text-decoration: none;"><i class="fa fa-list-ol" aria-hidden="true"></i> Grade Quiz 1</a>
+        <a href="#" style="color: red; text-decoration: none;"><i class="fa fa-list-ol" aria-hidden="true"></i> Grade
+          A1</a>
+        <br />
+        <a href="#" style="color: red; text-decoration: none;"><i class="fa fa-list-ol" aria-hidden="true"></i> Grade
+          Quiz 1</a>
       </div>
 
       <div>
