--- a/public/index.html
+++ b/public/index.html
@@ -28,8 +28,8 @@
   </head>
   <body>
     
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
+    <!-- <noscript>You need to enable JavaScript to run this app.</noscript>
+    <div id="root"></div> -->
    
 
     <h1>Welcome to Web Dev</h1>
